// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/AdminConsole/CustomUrlSchemeSetting > initial state > with multiple items 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Custom URL Schemes:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        id="MySetting"
        placeholder="E.g.: \\"git,smtp\\""
        type="text"
        value="git,smtp,steam"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Allows message text to link if it begins with any of the comma-separated URL schemes listed. By default, the following schemes will create links: "http", "https", "ftp", "tel", and "mailto".
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/CustomUrlSchemeSetting > initial state > with no items 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Custom URL Schemes:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        id="MySetting"
        placeholder="E.g.: \\"git,smtp\\""
        type="text"
        value=""
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Allows message text to link if it begins with any of the comma-separated URL schemes listed. By default, the following schemes will create links: "http", "https", "ftp", "tel", and "mailto".
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/CustomUrlSchemeSetting > initial state > with one item 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Custom URL Schemes:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        id="MySetting"
        placeholder="E.g.: \\"git,smtp\\""
        type="text"
        value="git"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Allows message text to link if it begins with any of the comma-separated URL schemes listed. By default, the following schemes will create links: "http", "https", "ftp", "tel", and "mailto".
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/CustomUrlSchemeSetting > renders properly when disabled 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Custom URL Schemes:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        disabled=""
        id="MySetting"
        placeholder="E.g.: \\"git,smtp\\""
        type="text"
        value="git,smtp"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Allows message text to link if it begins with any of the comma-separated URL schemes listed. By default, the following schemes will create links: "http", "https", "ftp", "tel", and "mailto".
      </div>
    </div>
  </div>
</div>
`;

exports[`components/AdminConsole/CustomUrlSchemeSetting > renders properly when set by environment variable 1`] = `
<div>
  <div
    class="form-group"
    data-testid="MySetting"
  >
    <label
      class="control-label col-sm-4"
      for="MySetting"
    >
      Custom URL Schemes:
    </label>
    <div
      class="col-sm-8"
    >
      <input
        class="form-control"
        disabled=""
        id="MySetting"
        placeholder="E.g.: \\"git,smtp\\""
        type="text"
        value="git,smtp"
      />
      <div
        class="help-text"
        data-testid="MySettinghelp-text"
      >
        Allows message text to link if it begins with any of the comma-separated URL schemes listed. By default, the following schemes will create links: "http", "https", "ftp", "tel", and "mailto".
      </div>
      <div
        class="alert alert-warning"
      >
        This setting has been set through an environment variable. It cannot be changed through the System Console.
      </div>
    </div>
  </div>
</div>
`;
